# featuremap

./: .gitignore  LICENSE  README.md  pyproject.toml
.faultline/: feature-map.json
faultline/: cli.py
faultline/analyzer/: ast_extractor.py  features.py  git.py
faultline/llm/: detector.py  flow_detector.py
faultline/models/: types.py
faultline/output/: reporter.py  writer.py
featuremap/: cli.py
featuremap/analyzer/: features.py  git.py
featuremap/llm/: detector.py
featuremap/models/: types.py
featuremap/output/: reporter.py  writer.py
tests/: test_ast_extractor.py  test_flow_detector.py  test_llm_detector.py
