[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "featuremap"
version = "0.1.0"
description = "Analyze git history to map features and track technical debt"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "gitpython>=3.1.40",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]

[project.scripts]
featuremap = "featuremap.cli:app"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/"
